--- a/index.html
+++ b/index.html
@@ -1,21 +1,81 @@
- 
+
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>iframe</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		<style>
+<head>
+<title>iframe</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+<style>
 
-
+html, body{
+    margin: 0;
+    padding:0;
+    background-color: lightgrey;
+}
+.header{
+    height: 100px;
+    background-color: blue;
+    text-align: center;
+}
+/*
  .embed-container { 
- position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style>
+    position: relative; 
+    padding-bottom: 56.25%; 
+    height: 0; 
+    overflow: hidden; 
+    max-width: 100%; 
+} 
+ .embed-container iframe, .embed-container object, .embed-container embed { 
+    position: absolute; 
+    top: 0; 
+    left: 0; 
+    width: 100%; 
+    height: 100%; 
+}
+*/
+</style>
  </head>
  <body>
-
+<div class="header">
+Header
+<p id="callback"></p>
+</div>
  <div class='embed-container'>
- <iframe src='https://hallmark-site.herokuapp.com/' style='border:0'></iframe>
+
+ <iframe src='https://hallmark-site.herokuapp.com/' style='border:0' width="100%" scrolling="no"></iframe>
  </div>
+ <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script type="text/javascript" src="js/iframeResizer.min.js"></script> 
+        <script type="text/javascript">
+
+            iFrameResize({
+                log                     : true,                  // Enable console logging
+                enablePublicMethods     : true,                  // Enable methods within iframe hosted page
+                resizedCallback         : function(messageData){ // Callback fn when resize is received
+                    $('p#callback').html(
+                        '<b>Frame ID:</b> '    + messageData.iframe.id +
+                        ' <b>Height:</b> '     + messageData.height +
+                        ' <b>Width:</b> '      + messageData.width + 
+                        ' <b>Event type:</b> ' + messageData.type
+                    );
+                },
+                messageCallback         : function(messageData){ // Callback fn when message is received
+                    $('p#callback').html(
+                        '<b>Frame ID:</b> '    + messageData.iframe.id +
+                        ' <b>Message:</b> '    + messageData.message
+                    );
+                    alert(messageData.message);
+                },
+                closedCallback         : function(id){ // Callback fn when iFrame is closed
+                    $('p#callback').html(
+                        '<b>IFrame (</b>'    + id +
+                        '<b>) removed from page.</b>'
+                    );
+                }
+            });
+
+
+        </script>
 
  </body>
  </html>
