--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Header
 
  <iframe src='https://hallmark-site.herokuapp.com/' style='border:0' width="100%" scrolling="no"></iframe>
  </div>
- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+ <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/core.js"></script>
         <script type="text/javascript" src="js/iframeResizer.min.js"></script> 
         <script type="text/javascript">
 
