--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 
     <meta name="application-name" content="Hallmark" />
     <meta name="keywords" content="Hallmark" />
-    <meta name="author" content="dlittle42">
     <meta http-equiv="Cache-Control" content="no-siteapp" />
     <meta name="google" value="notranslate">
     <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
@@ -17,6 +16,17 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="theme-color" content="#ffffff">
+
+    <meta property="og:title" content="Share Your Most Wonderful Mantlepiece of Christmas"/>
+    <meta property="og:image" content="img.png"/>
+    <meta property="og:site_name" content="Hallmark Movies & Mysteries: Most Wonderful Mantlepiece of Christmas"/>
+    <meta property="og:description" content="Create your perfect Christmas Hearth, full of decorations and family photos!"/>
+
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:url" content="url">
+    <meta name="twitter:title" content="Share Your Most Wonderful Mantlepiece of Christmas">
+    <meta name="twitter:description" content="Create your perfect Christmas Hearth, full of decorations and family photos!">
+    <meta name="twitter:image" content="img.png">
 
     <!--<link rel="stylesheet" href="fonts.css" type="text/css" charset="utf-8" />-->
 </head>
