--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <meta property="og:title" content="Share Your Most Wonderful Mantlepiece of Christmas"/>
-    <meta property="og:image" content="img.png"/>
+    <meta property="og:image" content="/static/images/Hallmark.png"/>
     <meta property="og:site_name" content="Hallmark Movies & Mysteries: Most Wonderful Mantlepiece of Christmas"/>
     <meta property="og:description" content="Create your perfect Christmas Hearth, full of decorations and family photos!"/>
 
@@ -26,7 +26,7 @@
     <meta name="twitter:url" content="url">
     <meta name="twitter:title" content="Share Your Most Wonderful Mantlepiece of Christmas">
     <meta name="twitter:description" content="Create your perfect Christmas Hearth, full of decorations and family photos!">
-    <meta name="twitter:image" content="img.png">
+    <meta name="twitter:image" content="/static/images/Hallmark.png">
 
     <!--<link rel="stylesheet" href="fonts.css" type="text/css" charset="utf-8" />-->
 </head>
