--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     <meta name="twitter:title" content="Share Your Most Wonderful Mantlepiece of Christmas">
     <meta name="twitter:description" content="Create your perfect Christmas Hearth, full of decorations and family photos!">
     <meta name="twitter:image" content="/static/images/Hallmark.png">
-    
+
+    <script src="/static/js/oauth.js"></script>
+
 
     <!--<link rel="stylesheet" href="fonts.css" type="text/css" charset="utf-8" />-->
 </head>
